Fix spacing

--- a/src/assets/sass/_about.scss
+++ b/src/assets/sass/_about.scss
@@ -1,4 +1,5 @@
 section.about {
+  padding-bottom: 2rem;
   h1 {
     margin-bottom: 2rem;
     font-size: 2.5rem;
