--- a/src/assets/sass/_global.scss
+++ b/src/assets/sass/_global.scss
@@ -44,7 +44,7 @@ p {
 }
 
 .section-heading {
-    padding: 90px 0;
+    padding: 2rem 0 3rem;
     h2 {
         font-size: 3rem;
     }
