--- a/src/assets/sass/_services.scss
+++ b/src/assets/sass/_services.scss
@@ -8,9 +8,9 @@
     }
   }
 section.services {
+    padding-bottom: 2rem;
     background-color:#fafafa;
   .section-heading {
-      margin-bottom: 100px;
       h2 {
           margin-top: 0;
       }
