--- a/src/assets/sass/_work.scss
+++ b/src/assets/sass/_work.scss
@@ -1,4 +1,5 @@
 section.work {
+  padding-bottom: 2rem;
   h1 {
     margin-bottom: 2rem;
     font-size: 2.5rem;
